test/zinc_source/compile_errors/functions/28_ufcs_untyped_receiver_parameter.zn
// expected-error: requires an explicit type annotation on receiver parameter 'x'

fn double(x) {
    return x * 2
}

fn main() {
    value = 2
    print(value.double())
}
